修改项目主页的样式

--- a/index.html
+++ b/index.html
@@ -18,15 +18,7 @@
 
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/ufologist/javascript-utility-library-collection">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/ufologist/javascript-utility-library-collection/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/ufologist/javascript-utility-library-collection/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
+    <a href="https://github.com/ufologist/javascript-utility-library-collection"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
     <div class="wrapper">
 
       <section>
@@ -37,11 +29,6 @@
           <span class="credits left">Project maintained by <a href="https://github.com/ufologist">ufologist</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
-
-        <h1>
-<a name="javascript-utility-library-collection" class="anchor" href="#javascript-utility-library-collection"><span class="octicon octicon-link"></span></a>javascript-utility-library-collection</h1>
-
-<p>collect popular (independent) utility javascript (micro) library</p>
 
 <p>DO ONE THING AND DO IT WELL</p>
 
